feat: run sh